crates/core/tests/snapshots/un_object_rest_rule__alias_does_not_collide_with_existing_binding.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: result
---
const _replace = sentinel;
const { replace: _replace_1, ...rest } = props;
