crates/core/tests/snapshots/un_object_rest_rule__basic_object_without_properties_iife.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { a, b, ...rest } = props;
