crates/core/tests/snapshots/un_object_rest_rule__iife_absorbs_boolean_defaults.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { enabled = true, hidden = false, ...rest } = props;
use(enabled, hidden, rest);
