crates/core/tests/snapshots/un_object_rest_rule__iife_absorbs_default_pairs.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { name = "default", value = 42, ...rest } = props;
use(name, value, rest);
