crates/core/tests/snapshots/un_object_rest_rule__multi_declarator_comma_separated.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: rule_output
---
const f = (e)=>{
    var { to: t, exact: n, ...d } = e;
    var p = "hello";
    use(t, n, d, p);
};
