crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_absorbs_default_pairs.snap
---
source: crates/core/tests/un_object_rest_rule.rs
assertion_line: 509
expression: output
---
const a = t;
const { name = "default", value = 42, ...rest } = a;
use(name, value, rest);
