crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_basic.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { a, b, ...rest } = props;
use(a, rest);
