crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_boolean_default_false.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { withRef = false, ...rest } = obj;
