crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_boolean_default_true.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { enabled = true, ...rest } = obj;
