crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_for_in_rejects_unguarded_copy.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
function m(obj, t) {
    const n = {};
    for(const r in obj){
        t.indexOf(r);
        Object.prototype.hasOwnProperty.call(obj, r);
        n[r] = obj[r];
    }
    return n;
}
const rest = m(obj, [
    "a"
]);
